# DSS

./: pyproject.toml
conda/: meta.yaml
doc/: requierements.txt
example/: DSS_demo_integration_dashboard.ipynb  DSS_demonstration.ipynb  Epymix_integration.ipynb  dss_demo.ipynb  ipm_dss.ipynb  psilarobs.csv
src/openalea/dss/: datamanipulation.py  fakers.py  ipm_DSS.py  manager.py
src/openalea/fastapi/: main.py
src/openalea/ipmdss_wralea/: __wralea__.py
test/: test_model.py
